:bug: Fixing background overflow
Basically the BG wouldnt take up 100% of view height, so over compensating here, not sure why or how but it works

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,14 @@
   text-rendering: optimizeLegibility;
 }
 
+html,
+body,
+body > div:first-child,
+div#__next,
+div#__next > div {
+  height: calc(100% + 8%);
+}
+
 p,
 li,
 h1,
